apps/excalidraw/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: excalidraw
  labels:
    app.kubernetes.io/name: excalidraw
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: excalidraw
  template:
    metadata:
      labels:
        app.kubernetes.io/name: excalidraw
    spec:
      containers:
        - name: excalidraw
          image: excalidraw/excalidraw:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              memory: 64Mi
            limits:
              memory: 128Mi
