apps/excalidraw/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: excalidraw
  labels:
    app.kubernetes.io/name: excalidraw
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: excalidraw
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
