apps/excalidraw/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: excalidraw
  namespace: excalidraw
  labels:
    app.kubernetes.io/name: excalidraw
  annotations:
    external-dns.alpha.kubernetes.io/target: "traefik.lab.paultibbetts.uk"
    gethomepage.dev/href: "https://excalidraw.lab.paultibbetts.uk"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Whiteboard and diagram sketching
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: excalidraw.png
    gethomepage.dev/name: Excalidraw
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`excalidraw.lab.paultibbetts.uk`)
      kind: Rule
      services:
        - name: excalidraw
          port: http
  tls: {}
